# ElectricAndMagneticFieldSimulation

./: CMakeLists.txt  README.md  electric_field.c  electric_field.h  flow_field.c  flow_field.h  magnetic_field.c  magnetic_field.h  main.c
